# LocalRAG

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eval_dataset.json  fix_dataset.py  generate_eval_dataset.py  measure_latency.py  pyproject.toml  requirements.txt  run_synthetic_eval.py  scratch_boundary.py  scratch_test_chunk.py  test_position_bias.py
.github/workflows/: ci.yml
app/: main.py
app/api/endpoints/: judge.py  query.py  (+1 more)
app/core/: config.py
app/judge/: aggregator.py  compare.py  judge_service.py  logger.py  parser.py  prompt_builder.py  validator.py
app/middleware/: logging.py
app/schemas/: api.py  document.py  judge.py  vector.py
app/services/: chunk_service.py  embedding_service.py  ingestion_service.py  llm_service.py  parser_service.py
app/storage/: vector_store.py
app/utils/: hashing.py
datasets/judge/: human_labels.json
docs/: architecture.md  cost_analysis.md  development_log.md  records.md
docs/adr/: 001-vector-db.md  002-chunking.md  003-ollama.md  004-embeddings.md
eval_datasets/judge/: adversarial.json  suite.json
prompts/: judge_v1.txt
reports/judge/: report_20260701_151424.json
sample_data/html/: company_policy.html
sample_data/markdown/: rag_notes.md
scripts/: evaluate.py  evaluate_ir.py  evaluate_judge.py  run.ps1  run.sh  setup.ps1  setup.sh  test_rag_polish.py
tests/integration/: test_judge_api.py  test_query_api.py  test_storage_api.py
tests/unit/: test_chunk_service.py  test_embedding_service.py  test_hashing.py  test_judge.py  test_main.py  test_parser.py  test_vector_store.py
(+14 files in other folders)
